Got browser tests consistently working by refactoring slightly

--- a/introduction/install.html
+++ b/introduction/install.html
@@ -21,12 +21,8 @@
     </ul>
     <p>No good for TDD, designed to help with refactoring</p>
     <ul>
-      <li><del>to be sure what I &ldquo;thought&rdquo; is what I get</del></li>
-      <li>to avoid regressions per each new behavior</li>
-      <li><del>to better analyze a specific problem</del></li>
-      <li>to provide more robust code</li>
-      <li>to convince others my code works</li>
-      <li>to cover every single line I wrote</li>
+      <li>Avoid regression</li>
+      <li>Provide more robust code</li>
     </ul>
   </body>
 </html>
