--- a/introduction/install.html
+++ b/introduction/install.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>cssert &ndash; CSS Unit Tests</title>
+    <link href='http://fonts.googleapis.com/css?family=Quicksand:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
