--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>cssert &ndash; CSS Unit testing</h1>
     <h2>Make sure your styles don't change when your files do.</h2>
     <p>When working on a large project, you sometimes need to refactor your CSS. If you aren't constantly aware of all the different dependencies, you can end up altering the styles somewhere unexpected. This framework is designed to help you create key test cases linked to your styles. If the tests pass after refactoring, you can be sure your design is intact.</p>
+    <p class="bookmarklet"><a href="https://github.com/thingsinjars/cssert">Download from GitHub</a></p>
     <h2>Design</h2>
     <p>This works by generating a simple HTML skeleton unit which matches the minimal page structure around the element whose styles you want to test. This unit contains references to your project's CSS. You can then refactor your CSS as much as you like and as long as the styles amount to the same visual appearance, the test will continue to pass.</p>
     <h2 class="pass">Usage</h2>
@@ -19,12 +20,6 @@
     <h2>Bookmarklet</h2>
     <p class="bookmarklet"><a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://raw.github.com/thingsinjars/cssert/master/lib/generate-tests.js';})();">Generate Tests</a></p>
     <h2 class="fail">Limitations</h2>
-    <p>This is probably not going to be any good for Test-Driven
-    Development (TDD). By the time you've written your test case, you'd
-    really have been better off writing the actual HTML. Especially as
-    you could then use the bookmarklet to generate the test case.
-    Possibly there will be a point in the future where the visual
-    designer on a project could specify the test case beforehand but
-    until then, this is best used to help with refactoring.</p>
+    <p>This is probably not going to be any good for Test-Driven Development (TDD). By the time you've written your test case, you'd really have been better off writing the actual HTML. Especially as you could then use the bookmarklet to generate the test case. Possibly there will be a point in the future where the visual designer on a project could specify the test case beforehand but until then, this is best used to help with refactoring.</p>
   </body>
 </html>
