Changing description to emphasise verification

--- a/introduction/index.html
+++ b/introduction/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
   <head>
-    <title>cssert &ndash; CSS Unit Tests</title>
+    <title>cssert &ndash; CSS Verification Tests</title>
     <link href='http://fonts.googleapis.com/css?family=Quicksand:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <h1>cssert &ndash; CSS Unit testing</h1>
+    <h1>cssert &ndash; CSS verification testing</h1>
     <h2>Make sure your styles don't change when your files do.</h2>
     <p>When working on a large project, you sometimes need to refactor your CSS. If you aren't constantly aware of all the different dependencies, you can end up altering the styles somewhere unexpected. This framework is designed to help you create key test cases linked to your styles. If the tests pass after refactoring, you can be sure your design is intact.</p>
     <h2>Design</h2>
