Removed a limitation now that it no longer counts

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <header><h1>cssert</h1><h2>CSS Verification Testing</h2></header>
+    <header>
+      <h1>cssert</h1>
+      <h2>CSS Verification Testing</h2>
+    </header>
     <section>
       <h2>Make sure your styles don't change when your files do.</h2>
       <p>When working on a large project, you sometimes need to refactor your CSS. If you aren't constantly aware of all the different dependencies, you can end up altering the styles somewhere unexpected. This framework is designed to help you create key test cases linked to your styles. If the tests pass after refactoring, you can be sure your design is intact.</p>
@@ -26,8 +29,6 @@
       <p>Because the test generates the DOM via following parents up the structure, sibling elements are ignored. These styles are still testable, though. Simply add the sibling element into your HTML test block.</p>
       <h3>Styles modified by JS</h3>
       <p>The styles are measured on the element as it is when the case is generated. The test compares this against the styles provided by the CSS. If the element contains JS-only styles not added by CSS, they will not be correctly matched. Modify your test case to allow for this.</p>
-      <h3>Irrelevant styles mismatched</h3>
-      <p>If you just want to keep an eye on the background-colour or the font-size of an element, it might get annoying to repeatedly have fails for a different width or margin on an element. The automatic cases grab a bunch of different styles to measure, most of which will be irrelevant to the specific case you want to test for. The next version of the generator contains a simple style selector to allow you to choose which styles you want to maintain at test generation time.</p>
       <h3>Red-Green Testing</h3>
       <p>This isn't any good for Test-Driven Development. Due to CSS and HTML both being declarative, by the time you've written your test case, you'd really have been better off writing the actual HTML. Especially as you could then have used the bookmarklet to generate the test case.</p>
       <p>They may be a point in the future where the visual designer on a project could specify the test case beforehand but until then, this is best used to help with refactoring.</p>
