All tests can now be run from the exact same test files.
FInally found the last remaining bug preventing browser and
command-line tests being the same file. Tests now get run from the
tests/ directory

--- a/tests/twitter-bootstrap-container.html
+++ b/tests/twitter-bootstrap-container.html
@@ -1,4 +1,4 @@
-<!doctype html><html><head><title>cssert test page</title><link rel="stylesheet" href="cssert.css"></head><body><h1>cssert Test cases</h1><p>click to expand test</p><script type="text/html">/*==
+<!doctype html><html><head><title>cssert test page</title><link rel="stylesheet" href="../lib/cssert.css"></head><body><h1>cssert Test cases</h1><p>click to expand test</p><script type="text/html">/*==
 Topbar input
 -
 <!doctype html><html><head><meta charset="utf-8"><base href="http://twitter.github.com/bootstrap/examples/container-app.html"><link href="../1.3.0/bootstrap.css" rel="stylesheet"><style type="text/css">
@@ -248,4 +248,4 @@ html body div div div h1 small
 ==
 
 
-*/</script><script src="cssert.js"></script></body></html>
+*/</script><script src="../lib/cssert.js"></script></body></html>
