--- a/tests/twitter-bootstrap-fluid.html
+++ b/tests/twitter-bootstrap-fluid.html
@@ -1,4 +1,4 @@
-<!doctype html><html><head><title>cssert test page</title><link rel="stylesheet" href="cssert.css"></head><body><h1>cssert Test cases</h1><p>click to expand test</p><script type="text/html">/*==
+<!doctype html><html><head><title>cssert test page</title><link rel="stylesheet" href="../lib/cssert.css"></head><body><h1>cssert Test cases</h1><p>click to expand test</p><script type="text/html">/*==
 Mid-content paragraph
 -
 <!doctype html><html><head><meta charset="utf-8"><base href="http://twitter.github.com/bootstrap/examples/fluid.html"><link href="../1.3.0/bootstrap.css" rel="stylesheet"><style type="text/css">
@@ -28,4 +28,4 @@ html body div div div a
 ==
 
 
-*/</script><script src="cssert.js"></script></body></html>
+*/</script><script src="../lib/cssert.js"></script></body></html>
