Added a description of testing strategy

--- a/introduction/index.html
+++ b/introduction/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+	<meta charset="utf-8">
     <title>cssert &ndash; CSS Verification Tests</title>
     <link rel="stylesheet" href="fonts/stylesheet.css" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
@@ -23,7 +24,7 @@
     <p>This isn't any good for Test-Driven Development. Due to CSS and HTML both being declarative, by the time you've written your test case, you'd really have been better off writing the actual HTML. Especially as you could then have used the bookmarklet to generate the test case.</p>
     <p>They may be a point in the future where the visual designer on a project could specify the test case beforehand but until then, this is best used to help with refactoring.</p>
     <h2>More information</h2>
-    <p>You can find more info on the <a href="http://thingsinjars.github.com/cssert/">project's website</a>.</p>
+    <p>You can find more info on the <a href="http://thingsinjars.github.com/cssert/">project's website</a> or you can read the ideas behind <a href="testing-declarative.html">testing a declarative language</a>.</p>
     </section>
   </body>
 </html>
