--- a/tests/testcases.html
+++ b/tests/testcases.html
@@ -1,11 +1,7 @@
 <!doctype html><html><head><title>cssert test page</title><link rel="stylesheet" href="../lib/cssert.css"></head><body><h1>cssert Test cases</h1><p>click to expand test</p><script type="text/html">/*==
 Header
 -
-<!doctype html><html><head><meta charset="utf-8"><base href="http://twitter.github.com/bootstrap/examples/hero.html"><link href="../1.3.0/bootstrap.css" rel="stylesheet"><style type="text/css">
-      body {
-        padding-top: 60px;
-      }
-    </style><style>#cssert-style-modal {display:none;position: fixed;top: 10%;left: 50%;margin-left: -350px;width: 700px;background: #39c;color: white;padding: 10px;color: #fff;text-shadow: 0 1px 0 rgba(0,0,0,.3);background-image: -webkit-linear-gradient(-45deg, rgba(255,255,255,0), rgba(255,255,255,.1) 60%, rgba(255,255,255,0) 60%);border-radius: 5px;border: 1px solid #17a;box-shadow: inset 0 0 0 1px rgba(255,255,255,.3);}#cssert-style-modal ul,#cssert-style-modal li ,#cssert-style-modal label {margin:0 !important;padding:0 !important;font-size:13px !important;list-style:none !important;text-align:left !important;color:white !important;}#cssert-style-modal>ul>li>label {text-align:left;color:white;font-size:15px !important;}#cssert-style-modal>ul>li {float:left !important;width:140px !important;}#cssert-style-modal ul {margin-bottom:10px !important;}#cssert-style-modal button {padding:10px !important;bottom:0;right:0;}#cssert-pre {position:fixed !important;top:10px !important;right:10px !important;background:white !important;border:1px solid gray !important;width:200px !important;height:200px !important;overflow:auto !important;}#cssert-drag {position:fixed !important;top:210px !important;right:10px !important;background:white !important;border:1px solid gray !important;width:200px !important;height:20px !important;overflow:auto !important;}</style></head><body><div class="container"><div class="hero-unit"><h1>Hello, world!</h1></div></div></body></html>
+<!doctype html><html><head><meta charset="utf-8"><base href="http://twitter.github.com/bootstrap/examples/hero.html"><link href="../1.3.0/bootstrap.css" rel="stylesheet"><style type="text/css">body {padding-top: 60px;}</style></head><body><div class="container"><div class="hero-unit"><h1>Hello, world!</h1></div></div></body></html>
 -
 html body div div h1
 -
