Added new tests

--- a/test-runners/testcases.html
+++ b/test-runners/testcases.html
@@ -9,7 +9,7 @@ Header
 -
 html body div div h1
 -
-{"font-family":"'Helvetica Neue', Helvetica, Arial, sans-serif","font-weight":"bold","font-style":"normal","color":"rgb(64, 64, 64)","text-transform":"none","text-decoration":"none","letter-spacing":"-1px","word-spacing":"0px","line-height":"60px","text-align":"-webkit-auto","vertical-align":"baseline","direction":"ltr","background-color":"rgba(0, 0, 0, 0)"}
+{"font-family":"'Helvetica Neue', Helvetica, Arial, sans-serif","font-weight":"bold","font-style":"normal","color":"rgb(64, 64, 64)","text-transform":"none","text-decoration":"none","letter-spacing":"-1px","word-spacing":"0px","line-height":"60px","vertical-align":"baseline","direction":"ltr","background-color":"rgba(0, 0, 0, 0)"}
 ==
 
 
