--- a/test-runners/twitter-bootstrap-container.html
+++ b/test-runners/twitter-bootstrap-container.html
@@ -56,7 +56,7 @@ Topbar input
 -
 html body div div div form input
 -
-{"color":"rgba(255, 255, 255, 0.746094)","letter-spacing":"normal","line-height":"13px","width":"90px","height":"18px","margin-top":"0px","margin-bottom":"0px","margin-left":"0px","opacity":"1","display":"inline-block","visibility":"visible"}
+{"color":"rgba(255, 255, 255, 0.746094)","letter-spacing":"normal","line-height":"13px","width":"90px","height":"19px","margin-top":"0px","margin-bottom":"0px","margin-left":"0px","opacity":"1","display":"inline-block","visibility":"visible"}
 ==
 
 
@@ -244,7 +244,7 @@ Tagline
 -
 html body div div div h1 small
 -
-{"font-family":"'Helvetica Neue', Helvetica, Arial, sans-serif","font-weight":"normal","font-style":"normal","color":"rgb(191, 191, 191)","text-transform":"none","text-decoration":"none","letter-spacing":"normal","word-spacing":"0px","line-height":"18px","text-align":"-webkit-auto","vertical-align":"baseline","direction":"ltr"}
+{"font-family":"'Helvetica Neue', Helvetica, Arial, sans-serif","font-weight":"normal","font-style":"normal","color":"rgb(191, 191, 191)","text-transform":"none","text-decoration":"none","letter-spacing":"normal","word-spacing":"0px","line-height":"18px","vertical-align":"baseline","direction":"ltr"}
 ==
 
 
