--- a/test-runners/twitter-bootstrap-fluid.html
+++ b/test-runners/twitter-bootstrap-fluid.html
@@ -9,7 +9,7 @@ Mid-content paragraph
 -
 html body div div div div p
 -
-{"font-family":"'Helvetica Neue', Helvetica, Arial, sans-serif","font-weight":"normal","font-style":"normal","color":"rgb(64, 64, 64)","line-height":"18px","text-align":"-webkit-auto"}
+{"font-family":"'Helvetica Neue', Helvetica, Arial, sans-serif","font-weight":"normal","font-style":"normal","color":"rgb(64, 64, 64)","line-height":"18px"}
 ==
 
 
@@ -24,7 +24,7 @@ Topbar Title
 -
 html body div div div a
 -
-{"font-family":"'Helvetica Neue', Helvetica, Arial, sans-serif","font-weight":"200","font-style":"normal","color":"rgb(255, 255, 255)","line-height":"20px","text-align":"-webkit-auto","position":"static","z-index":"auto","float":"left","clear":"none"}
+{"font-family":"'Helvetica Neue', Helvetica, Arial, sans-serif","font-weight":"200","font-style":"normal","color":"rgb(255, 255, 255)","line-height":"20px","position":"static","z-index":"auto","float":"left","clear":"none"}
 ==
 
 
