--- a/test-runners/twitter-bootstrap-hero.html
+++ b/test-runners/twitter-bootstrap-hero.html
@@ -9,7 +9,7 @@ Intro Paragraph
 -
 html body div div p
 -
-{"font-family":"'Helvetica Neue', Helvetica, Arial, sans-serif","font-weight":"200","font-style":"normal","color":"rgb(64, 64, 64)","text-transform":"none","text-decoration":"none","letter-spacing":"normal","word-spacing":"0px","line-height":"27px","text-align":"-webkit-auto","vertical-align":"baseline","direction":"ltr"}
+{"font-family":"'Helvetica Neue', Helvetica, Arial, sans-serif","font-weight":"200","font-style":"normal","color":"rgb(64, 64, 64)","text-transform":"none","text-decoration":"none","letter-spacing":"normal","word-spacing":"0px","line-height":"27px","vertical-align":"baseline","direction":"ltr"}
 ==
 
 
@@ -24,7 +24,7 @@ Blue Button
 -
 html body div div p a
 -
-{"font-family":"'Helvetica Neue', Helvetica, Arial, sans-serif","font-weight":"200","font-style":"normal","color":"rgb(255, 255, 255)","text-transform":"none","text-decoration":"none","letter-spacing":"normal","word-spacing":"0px","line-height":"normal","text-align":"-webkit-auto","vertical-align":"baseline","direction":"ltr","width":"84px","height":"18px","float":"none"}
+{"font-family":"'Helvetica Neue', Helvetica, Arial, sans-serif","font-weight":"200","font-style":"normal","color":"rgb(255, 255, 255)","text-transform":"none","text-decoration":"none","letter-spacing":"normal","word-spacing":"0px","line-height":"normal","vertical-align":"baseline","direction":"ltr","width":"84px","height":"18px","float":"none"}
 ==
 
 
